redis/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: example-redis-svc
    role: service
  name: example-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
      role: redis-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
      name: example-redis-deploy
    name: example-redis
spec:
  selector:
    matchLabels:
      name: example-redis
      role: redis-master
  template:
    metadata:
      labels:
        name: example-redis
        role: redis-master
    spec:
      containers:
      - image: k8s.gcr.io/redis:v1
        name: example-redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
        - mountPath: /redis-master
          name: config
      volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: example-redis
          items:
          - key: redis-config
            path: redis.conf
