redis/redis-ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-redis
spec:
  rules:
  - host: example-redis.sloppytiger.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: example-redis-sentinel
          servicePort: 26379
